# cmake_02

./: CMakeLists.txt  multi_class_Figure.cpp  multi_class_Figure.h  multi_class_Firure.cpp  multi_class_Quadrilateral.cpp  multi_class_Quadrilateral.h  multi_class_main.cpp  multi_class_triangle.cpp  multi_class_triangle.h
Debug/: multi_class_main.exe.recipe  multi_class_main.ilk  multi_class_main.vcxproj.FileListAbsolute.txt  vc143.idb
Debug/multi_class_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  multi_class_main.lastbuildstate
x64/Debug/: multi_class_main.ilk  vc143.idb
x64/Debug/multi_class_main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  multi_class_main.lastbuildstate
